# desktop-tool

./: CMakeLists.txt  README.md
src/: buttonwidget.cc  buttonwidget.h  main.cc  mainwidget.cc  mainwidget.h
